test/types/records/ferguson/default-compare-mixed-insn.5.good
default-compare-mixed-insn.chpl:8: In function 'main':
default-compare-mixed-insn.chpl:25: error: unresolved call '!=(R(int(32)), R(int(64)))'
$CHPL_HOME/modules/internal/ChapelBase.chpl:114: note: this candidate did not match: !=(a: _nilType, b: _nilType)
